--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <main>
-      <h1>リンクです〜</h1>
+      <h1>リンクです〜ヨ</h1>
       
       <a href="https://qiita.com/Nagahisa/" target="_blank"><button>Qiitaに行く</button></a>
       <a href="https://www.facebook.com/kenzo.nagahisa" target="_blank"><button>Facebookに行く</button></a>
