update index.html to link 20211113-algyan

--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-Hello World & Discover Japan
+<a href="https://nagahisa.github.io/20211113-algyan" target="_blank" rel="noopener noreferrer">
+    2021/11/13 AlgyanイベントでのLT
+</a>
