--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@ layout: default
 <a href="https://nagahisa.github.io/20211113-algyan" target="_blank" rel="noopener noreferrer">
     2021/11/13 AlgyanイベントでのLT
 </a>
+<br>
+<a href="https://nagahisa.github.io/20220312-xrworkshop" target="_blank" rel="noopener noreferrer">
+    2022/03/12 XR Workshopでの発表
+</a>
